--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongodb": "^6.12.0",
     "next": "14.2.0",
     "react": "^18",
     "react-dom": "^18"
