--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^3.7.4",
     "mongodb": "^6.12.0",
+    "mongoose": "^8.9.5",
     "next": "^14.2.23",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
