--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.7.4",
+    "axios": "^1.7.9",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
     "next": "^14.2.23",
